--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.16.5",
+    "@babel/core": "^7.20.5",
     "@babel/plugin-transform-runtime": "^7.16.10",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "babel-loader": "^8.2.3",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^8.3.0",
     "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.0",
-    "webpack": "^5.65.0",
+    "webpack": "^5.75.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
+    "@babel/plugin-syntax-jsx": "^7.18.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
